# PRODUCTION-READY-RAG

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy.yml  deploy-docs.yml  publish-package.yml  test-check-build.yml  version-bump-and-release.yml
artifacts/chunks/: chunking_report.json
artifacts/cleaned/: cleaning_report.json
artifacts/evaluation/: evaluation_report.json  evaluation_report_v1.json
artifacts/metadata/: metadata_report.json
artifacts/raw/: ingestion_report.json
docs/: index.md  modules.md
my_rag_app/: main.py
my_rag_app/api/: endpoint.py
my_rag_app/config/: config.py
my_rag_app/constants/: __init__.py
my_rag_app/core/: data_cleaning.py  ingestion.py  qdrant.py
my_rag_app/core/guardrails/: pii.py  validation.py
my_rag_app/core/ingestion/: chunking.py  data_cleaning.py  data_ingestion.py  metadata.py
my_rag_app/core/prompting/: check.py  context_builder.py  prompt_builder.py
my_rag_app/core/qdrant/: collection.py  reranker.py  retriever.py
my_rag_app/entity/: models.py  reports.py
my_rag_app/exception/: __init__.py  db_connection.py  imap_connection.py  model.py  monitoring.py  qdrant.py
my_rag_app/guardrails/: pii.py  validation.py
my_rag_app/logger/: __init__.py
my_rag_app/models/: load.py  loadv2.py
my_rag_app/monitoring/: eval_v1.py  evaluation.py  golden.jsonl  golden_v1.jsonl  metrics.py
my_rag_app/pipeline/: data_pipeline.py  rag_pipeline.py
my_rag_app/prompting/: context_builder.py  prompt_builder.py
my_rag_app/retrieval/: retriever.py
notebooks/: latenct_test1.ipynb  latency_test.ipynb  llm_experiment.ipynb  rerank_experiment.ipynb  retrieval_experiment.ipynb
tests/: test_api_endpoint.py
tests/unit_test/: chunking_test.py  data_cleaning_test.py  data_ingestion_test.py  guardrail_test.py  metadata_test.py
