[tool.poetry]
name = "my_rag_app"
version = "0.0.1"
description = "This is a template repository for Python GenAI RAG projects that use Poetry for their dependency management."
authors = ["Danish Shaikh <shaikhdanish.sd06@gmail.com>"]
repository = "https://github.com/danishshaikh06/PRODUCTION-READY-RAG/"
documentation = "https://github.com/danishshaikh06/PRODUCTION-READY-RAG/"
readme = "README.md"
packages = [
  {include = "my_rag_app"}
]

[tool.poetry.scripts]
my_rag_app = "my_rag_app.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "~0.100.0"  # Latest compatible version
uvicorn = "^0.23.0"  # For running FastAPI apps
fastapi-health = "^0.4.0"  # Health check for FastAPI
#pyyaml = "^6.0.2"
#python-box = "^7.2.0"
#ensure = "^1.0.4"
#joblib = "^1.3.2"  # Parallel processing and caching
#python-dotenv = "^1.0.0"  # Manage environment variables
#PyPDF2 = "^3.0.0"  # For PDF manipulation
#pydantic = "^2.0.0"  # Data validation and settings management
qdrant-client = "1.18.0"
beautifulsoup4 = "4.15.0"
dotenv = "0.9.9"
fastembed = "0.8.0"
sentence-transformers = "5.6.0"
tiktoken = "^0.13.0"
requests = "^2.34.2"
sqlalchemy = "^2.0.51"
mlflow = "^3.14.0"
dagshub = "^0.7.0"


[tool.poetry.group.dev.dependencies]
deptry = "^0.16.2"  # For dependency management
pre-commit = "^3.4.0"  # Pre-commit hooks
tox = "^4.11.1"  # Testing in multiple environments
ipykernel = "^6.25.0"  # Jupyter kernel
build = "^1.0.0"  # Build management
bump-my-version = "^0.28.2"  # Bump versions automatically
codespell = "^2.2.5"  # Spell checking in code
wheel = "^0.41.0"  # Build wheels
twine = "^4.0.0"  # Publish packages
bandit = "^1.8.0"  # Security check
pylint = "^3.0.0"  # Powerful linter
pydocstyle = "^6.3.0"  # Enforce PEP 257 docstring conventions

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"  # Documentation site generator
sphinx = "^7.2.0"  # Documentation tool
mkdocs-git-revision-date-plugin = "^0.3.2"  # Show revision dates
mkdocs-git-revision-date-localized-plugin = "^1.3.0"  # Localized dates
mkdocs-jupyter = ">=0.25.1"  # For Jupyter Notebook integration
mkdocs-pdf-export-plugin = "^0.5.10"  # PDF export
mkdocs-material = ">=9.1.3"  # MkDocs Material theme
mkdocstrings-crystal = "^0.3.0"  # Mkdocstrings for Crystal
pygments = "^2.16.0"  # Syntax highlighting
pymdown-extensions = "^10.0"  # Markdown extensions
nbconvert = "^7.7.0"  # Convert notebooks to other formats
nbformat = "^5.9.0"  # Notebook format support
livereload = "^2.6.3"  # Live reload for MkDocs
watchdog = "^3.0.0"  # File monitoring
mkdocstrings = {extras = ["python"], version = "^0.27.0"}  # Auto-generate documentation from docstrings
mkdocs-minify-plugin = "^0.8.0"  # Minify HTML

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.11.0"  # Mocking in tests
factory-boy = "^3.3.1"  # Test data generation
pytest-asyncio = "^0.21.0"  # Async testing support
pytest-xdist = "^3.3.1"  # Parallel test execution
freezegun = "^1.2.0"  # Mock datetime
pytest = "^7.2.0"  # Testing framework
allure-pytest = "^2.13.0"  # Reporting for pytest
pytest-sugar = "^0.9.7"  # Better test output
pytest-cov = "^4.0.0"  # Test coverage reports
httpx = "^0.24.0"
pytest-runner = "^6.0.0"  # Running tests via `python setup.py test`


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
files = ["my_rag_app"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
show_traceback = true


[[tool.mypy.overrides]]
module = [
    "joblib.*",
    "yaml.*",
    "ensure.*",
    "fastapi_health.*",
    "my_rag_app.main"
]
ignore_missing_imports = true
ignore_errors = true


[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = "legacy_tests"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:.*general_plain_validator_function.*:DeprecationWarning",
    "ignore:.*with_info_plain_validator_function.*:DeprecationWarning"
]


[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]

ignore = [
    "E501",
    "E731",
    "S104",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true


[tool.coverage.run]
branch = true
source = ["my_rag_app"]
# parallel = true
# concurrency = ["thread"]
omit = [
    "**/__init__.py", # Exclude all init files
    "my_rag_app/main.py",  # Exclude main.py file
    "my_rag_app/constants/*",   # Exclude all files in a constants folder
    "my_rag_app/exception/*",   # Exclude all files in a exception folder
    "my_rag_app/logger/*",  # Exclude all files in a logger folder
    "my_rag_app/entity/*",  # Exclude all files in entity folder
    "my_rag_app/config/*",  # Exclude all files in config folder
    "my_rag_app/models/*",  # Exclude all files in model folder
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
glob = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
glob = "my_rag_app/main.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.deptry]
exclude = ["research","artifacts", "notebooks", "tests", "docs", ".venv", "venv", "__pycache__", ".ruff_cache", ".pytest_cache", ".mypy_cache", ".coverage", ".git", "build", "dist", ".github", "site", "config"]

[tool.pydocstyle]
select = ["D101", "D102"]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
